# DonationTracker

./: .gitignore  DonationTracker.sln  README.md
CSharp/: DonationTracker.sln  README.md
CSharp/DonationTracker/: DonationTracker.sln  ReadMe.md
CSharp/DonationTracker_DesktopLayer/: DesktopOperations.cs  DonationTracker.Desktop.csproj  DonorAdditionWindow.cs  MainWindow.cs  Program.cs
CSharp/DonationTracker_IntegrationLayer/: DBConnect.cs  DatabaseSetup1.sql  DonationTracker.Integration.csproj  IntegrationOperations.cs
CSharp/DonationTracker_ServiceLayer/: DonationTracker.Service.csproj  ServiceLayerException.cs  ServiceOperations.cs
CSharpUsingDotNetCore/DonationTracker/: DonationTracker.sln  ReadMe.md
DonationTracker/: AddDonor.cs  DesktopOperations.cs  DonationTracker.Desktop.csproj  DonationTracker.csproj  DonorAdditionWindow.cs  MainWindow.cs
DonationTracker.Integration/: DonationIntegration.cs  DonationTracker.Integration.csproj  IntegrationOperations.cs
DonationTracker.Service/: DonationService.cs  DonationTracker.Service.csproj  MyClass.cs
DonationTracker_DesktopLayer/: DesktopOperations.cs  DonationTracker.Desktop.csproj  DonorAdditionWindow.cs  MainWindow.cs  Program.cs
DonationTracker_IntegrationLayer/: DBConnect.cs  DatabaseSetup.sql  DatabaseSetup2.sql  DatabaseTearDown.sql  DonationTracker.Integration.csproj  IntegrationOperations.cs  setupDatabase.bash
DonationTracker_ServiceLayer/: DonationTracker.Service.csproj  ServiceOperations.cs
Rust/donor-donations/: Cargo.toml  README.md
Rust/donor-donations/src/: database_bridge.rs  main.rs
(+98 files in other folders)
