[package]
name = "donor-donations"
version = "0.1.0"
authors = ["elsanussi-s-mneina <52800671+elsanussi-s-mneina@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8", features = ["v3_22"] }
glib = "0.9"
gio = { version = "0.8", features = ["v2_46"] }
gdk = "0.12"
log = "0.4"
postgres = "0.17"
rust_decimal = { version = "1.4.0", features = ["postgres"] }
